fix(cyberpunk): fix floating ToC on mobile

--- a/include/style/plugin.styl
+++ b/include/style/plugin.styl
@@ -28,35 +28,6 @@
         color: $grey
 
 /* ---------------------------------
- *      Table of Content Widget
- * --------------------------------- */
-+mobile()
-    #toc
-        display: none
-        position: fixed
-        margin: 1rem
-        left: 0
-        right: 0
-        bottom: 0
-        z-index: 100
-        max-height: calc(100vh - 2rem)
-        overflow-y: auto
-
-    #toc-mask
-        display: none
-        position: fixed
-        top: 0
-        left: 0
-        right: 0
-        bottom: 0
-        z-index: 99
-        background: rgba(0, 0, 0, .7)
-
-    #toc, #toc-mask
-        &.is-active
-            display: block
-
-/* ---------------------------------
  *      Page Loading Progressbar
  * --------------------------------- */
 .pace
